--- a/scss/login.scss
+++ b/scss/login.scss
@@ -102,7 +102,8 @@
       line-height: 20px;
       color: $dark-color;
 
-      &:focus + label {
+      &:focus + label,
+      &.active + label {
         top: -20px;
         transform: none;
         font-size: 14px;
