--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -22,7 +22,7 @@
       display: block;
       font-size: 37px;
       line-height: 39px;
-      font-weight: 700;
+      //font-weight: 700;
       color: #fff;
       text-transform: uppercase;
       margin: 0 0 35px 0;
