--- a/scss/offer.scss
+++ b/scss/offer.scss
@@ -102,7 +102,7 @@
     display: block;
     font-size: 24px;
     line-height: 26px;
-    font-weight: 700;
+    //font-weight: 700;
     text-transform: uppercase;
     color: #fff;
     margin-bottom: 30px;
@@ -231,7 +231,7 @@
   margin-bottom: 15px;
   font-size: 18px;
   line-height: 20px;
-  font-weight: 700;
+  font-weight: 600;
   color: $dark-color;
   text-transform: uppercase;
 
@@ -280,7 +280,7 @@
         padding: 0;
         font-size: 24px;
         line-height: 26px;
-        font-weight: 700;
+        //font-weight: 700;
         color: $main-color;
         margin-bottom: 30px;
       }
@@ -303,7 +303,7 @@
         border-top: 1px solid #dedfe0;
         font-size: 18px;
         line-height: 20px;
-        font-weight: 600;
+        //font-weight: 600;
         text-transform: uppercase;
         color: $dark-color;
         text-decoration: none;
@@ -344,7 +344,7 @@
         display: block;
         font-size: 18px;
         line-height: 20px;
-        font-weight: 700;
+        font-weight: 600;
         color: $dark-color;
         text-transform: uppercase;
         margin-bottom: 50px;
@@ -438,7 +438,7 @@
         width: calc(100% - 35px);
         font-size: 18px;
         line-height: 20px;
-        font-weight: 700;
+        //font-weight: 700;
         color: $dark-color;
       }
     }
@@ -487,7 +487,7 @@
       width: 100%;
       font-size: 28px;
       line-height: 30px;
-      font-weight: 700;
+      font-weight: 600;
       color: #fff;
       text-transform: uppercase;
       z-index: 10;
@@ -568,7 +568,7 @@
       display: block;
       font-size: 24px;
       line-height: 26px;
-      font-weight: 700;
+      //font-weight: 700;
       color: $main-color;
       text-transform: uppercase;
       margin-bottom: 15px;
@@ -594,7 +594,7 @@
       display: inline-block;
       font-size: 18px;
       line-height: 20px;
-      font-weight: 700;
+      //font-weight: 700;
       color: $main-color;
       outline: none;
     }
@@ -621,7 +621,7 @@
       display: block;
       font-size: 28px;
       line-height: 30px;
-      font-weight: 700;
+      font-weight: 600;
       color: $dark-color;
       margin-bottom: 10px;
     }
@@ -686,7 +686,7 @@
       padding: 15px 20px 15px 0;
       font-size: 18px;
       line-height: 20px;
-      font-weight: 700;
+      font-weight: 600;
       color: #fff;
       position: relative;
       z-index: 10;
