--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -65,7 +65,6 @@ main {
   color: #fff;
   font-size: 14px;
   line-height: 16px;
-  font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
   border: 1px solid #fff;
@@ -95,6 +94,19 @@ main {
     background-color: #00b3b7;
     border-color: #00b3b7;
     text-decoration: none; }
+  .btn-repeat.dashboard-btn {
+    border-radius: 5px;
+    background-color: #00b3b7;
+    border-color: #00b3b7;
+    min-width: 100px;
+    text-align: center;
+    padding: 12px 20px;
+    font-size: 16px;
+    line-height: 18px;
+    margin: 15px 0 0 0; }
+    .btn-repeat.dashboard-btn:hover {
+      background-color: #203140;
+      border-color: #203140; }
 
 .repeat-heading {
   width: 520px;
@@ -112,7 +124,6 @@ main {
     font-size: 40px;
     line-height: 42px;
     color: #fff;
-    font-weight: 700;
     text-transform: uppercase;
     position: relative; }
     @media (max-width: 576px) {
@@ -123,10 +134,10 @@ main {
       content: '';
       display: block;
       width: 90px;
-      height: 4px;
+      height: 3px;
       background-color: #fff;
       position: absolute;
-      bottom: -20px;
+      bottom: -15px;
       left: 50%;
       transform: translateX(-50%); }
 
@@ -293,7 +304,6 @@ input[type=number]::-webkit-outer-spin-button {
     display: inline-block;
     font-size: 32px;
     line-height: 34px;
-    font-weight: 700;
     text-transform: uppercase;
     position: relative; }
     @media (max-width: 767px) {
@@ -315,7 +325,7 @@ input[type=number]::-webkit-outer-spin-button {
       content: '';
       display: block;
       width: 88px;
-      height: 4px;
+      height: 2px;
       position: absolute;
       bottom: -15px;
       left: 50%;
@@ -819,6 +829,256 @@ input[type=number]::-webkit-outer-spin-button {
           font-style: normal;
           margin-left: 15px; }
 
+.video-modal-wrapper {
+  max-width: 850px; }
+  .video-modal-wrapper .modal-content {
+    border: none;
+    background: transparent; }
+    .video-modal-wrapper .modal-content .close-video-modal {
+      position: absolute;
+      top: -28px;
+      right: 0;
+      font-size: 20px;
+      line-height: 20px;
+      color: #fff; }
+
+.preview-slider {
+  overflow: hidden; }
+  .preview-slider .slide {
+    margin: 0 10px;
+    outline: none;
+    cursor: pointer;
+    position: relative; }
+    .preview-slider .slide:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)); }
+    .preview-slider .slide .play-preview-button {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 10;
+      width: 40px; }
+      @media (max-width: 576px) {
+        .preview-slider .slide .play-preview-button {
+          width: 20px; } }
+    .preview-slider .slide .title-video-preview {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 5px 10px;
+      width: 100%;
+      font-size: 14px;
+      line-height: 16px;
+      font-weight: 700;
+      color: #fff;
+      text-transform: uppercase;
+      z-index: 10; }
+  .preview-slider .slick-list {
+    margin-left: -10px;
+    margin-right: -10px; }
+
+.invest-modal-dialog {
+  max-width: 600px; }
+  .invest-modal-dialog .modal-content {
+    padding: 20px;
+    border: none; }
+    .invest-modal-dialog .modal-content .modal-close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      color: #7f7f7f;
+      font-size: 20px;
+      line-height: 20px; }
+    .invest-modal-dialog .modal-content .bottom-text {
+      font-size: 11px;
+      line-height: 16px;
+      color: #203140;
+      margin: 0;
+      text-align: justify; }
+    .invest-modal-dialog .modal-content span {
+      display: block;
+      font-size: 24px;
+      line-height: 26px;
+      color: #00b3b7;
+      text-transform: uppercase;
+      font-weight: 700;
+      margin-bottom: 20px;
+      padding-right: 25px; }
+    .invest-modal-dialog .modal-content em {
+      display: block;
+      font-style: normal;
+      font-size: 18px;
+      line-height: 23px;
+      font-weight: 300;
+      margin-bottom: 23px; }
+      .invest-modal-dialog .modal-content em.red-color {
+        color: #f33; }
+    .invest-modal-dialog .modal-content .invest-form-row {
+      margin-bottom: 20px; }
+      @media (max-width: 576px) {
+        .invest-modal-dialog .modal-content .invest-form-row {
+          display: block !important; } }
+      .invest-modal-dialog .modal-content .invest-form-row label {
+        display: block;
+        font-size: 24px;
+        line-height: 26px;
+        font-weight: 300;
+        color: #203140;
+        margin: 0;
+        flex: 1; }
+        @media (max-width: 576px) {
+          .invest-modal-dialog .modal-content .invest-form-row label {
+            margin-bottom: 10px; } }
+        .invest-modal-dialog .modal-content .invest-form-row label b {
+          font-size: 16px;
+          line-height: 18px; }
+      .invest-modal-dialog .modal-content .invest-form-row p {
+        font-size: 18px;
+        line-height: 24px;
+        color: #203140;
+        margin: 0;
+        flex: 1; }
+        @media (max-width: 576px) {
+          .invest-modal-dialog .modal-content .invest-form-row p {
+            margin-bottom: 10px; } }
+        .invest-modal-dialog .modal-content .invest-form-row p a {
+          color: #00b3b7;
+          text-decoration: underline; }
+          .invest-modal-dialog .modal-content .invest-form-row p a:hover {
+            text-decoration: none; }
+      .invest-modal-dialog .modal-content .invest-form-row .input-wrap input {
+        padding-left: 30px;
+        background-color: #ffffe1; }
+
+.input-wrap {
+  position: relative; }
+  .input-wrap i {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 700;
+    font-style: normal;
+    color: #203140; }
+  .input-wrap input {
+    display: block;
+    width: 260px;
+    height: 50px;
+    border-radius: .3rem;
+    border: 1px solid #ccc;
+    text-align: right;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 300;
+    color: #203140;
+    outline: none;
+    padding: 10px; }
+    @media (max-width: 576px) {
+      .input-wrap input {
+        width: 100%; } }
+
+.select-wrap {
+  position: relative; }
+  .select-wrap select {
+    display: block;
+    width: 330px;
+    height: 30px;
+    border-radius: .3rem;
+    border: 1px solid #ccc;
+    background-color: #ffffe1;
+    outline: none;
+    padding: 0 10px; }
+    @media (max-width: 576px) {
+      .select-wrap select {
+        width: 100%; } }
+    .select-wrap select option {
+      font-size: 16px;
+      line-height: 18px;
+      font-weight: 300; }
+
+.input-submit {
+  margin-left: 30px; }
+  @media (max-width: 576px) {
+    .input-submit {
+      margin-left: 0; } }
+  .input-submit input {
+    display: block;
+    min-width: 90px;
+    height: 30px;
+    border-radius: 30px;
+    background-color: #00b3b7;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 15px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    transition: all .2s linear; }
+    .input-submit input:hover {
+      background-color: #203140; }
+
+.payment-detail-modal {
+  max-width: 1450px; }
+  .payment-detail-modal .modal-content {
+    padding: 30px;
+    border: none; }
+    @media (max-width: 576px) {
+      .payment-detail-modal .modal-content {
+        padding: 30px 15px 15px 15px; } }
+    .payment-detail-modal .modal-content .modal-close {
+      position: absolute;
+      top: 30px;
+      right: 30px; }
+      @media (max-width: 576px) {
+        .payment-detail-modal .modal-content .modal-close {
+          top: 8px;
+          right: 8px; } }
+      .payment-detail-modal .modal-content .modal-close i {
+        font-size: 20px;
+        line-height: 24px;
+        color: #203140; }
+    .payment-detail-modal .modal-content h2 {
+      margin: 0 0 35px 0;
+      font-size: 30px;
+      line-height: 32px;
+      color: #00b3b7;
+      text-transform: uppercase; }
+      @media (max-width: 576px) {
+        .payment-detail-modal .modal-content h2 {
+          font-size: 24px;
+          line-height: 26px;
+          margin: 0 0 20px 0; } }
+    .payment-detail-modal .modal-content .payment-detail-row {
+      margin-bottom: 40px; }
+      @media (max-width: 576px) {
+        .payment-detail-modal .modal-content .payment-detail-row {
+          margin-bottom: 20px; } }
+      .payment-detail-modal .modal-content .payment-detail-row:last-child {
+        margin-bottom: 0; }
+      .payment-detail-modal .modal-content .payment-detail-row p {
+        font-size: 16px;
+        line-height: 20px;
+        color: #203140;
+        margin: 0 0 15px 0; }
+        @media (max-width: 576px) {
+          .payment-detail-modal .modal-content .payment-detail-row p {
+            word-break: break-all; } }
+        .payment-detail-modal .modal-content .payment-detail-row p:last-child {
+          margin: 0; }
+        .payment-detail-modal .modal-content .payment-detail-row p span {
+          font-weight: 700; }
+
 @media (max-width: 576px) {
   .dashboard-wrapper {
     overflow: hidden;
@@ -925,7 +1185,7 @@ input[type=number]::-webkit-outer-spin-button {
     .dashboard-row.dashboard-change-pass-row .profile-details-row input {
       margin-bottom: 0; }
     .dashboard-row.dashboard-change-pass-row .button-wrapper {
-      margin-bottom: 15px; } }
+      margin-bottom: 15px !important; } }
   .dashboard-row .investment-board {
     padding: 0; }
   .dashboard-row:first-child {
@@ -1071,7 +1331,8 @@ input[type=number]::-webkit-outer-spin-button {
       line-height: 18px;
       color: #00b3b7;
       text-decoration: underline;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      outline: none !important; }
       .dashboard-table tbody tr td .pay-apply-button:hover {
         text-decoration: none; }
     .dashboard-table tbody tr td .pdf-button {
@@ -1080,6 +1341,7 @@ input[type=number]::-webkit-outer-spin-button {
       color: #00b3b7;
       font-size: 35px;
       line-height: 35px;
+      margin: 0 7px 0 -7px;
       transition: all .2s linear; }
       .dashboard-table tbody tr td .pdf-button:hover {
         opacity: .8; }
@@ -1087,6 +1349,13 @@ input[type=number]::-webkit-outer-spin-button {
       display: inline-block;
       vertical-align: middle;
       margin-right: 35px; }
+
+.table-link {
+  color: #00b3b7;
+  text-decoration: underline; }
+  .table-link:hover {
+    color: #00b3b7;
+    text-decoration: none; }
 
 .control-buttons {
   display: inline-block;
