--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -262,3 +262,79 @@
     }
   }
 }
+
+// payment detail modal
+.payment-detail-modal {
+  max-width: 1450px;
+
+  .modal-content {
+    padding: 30px;
+    border: none;
+
+    @media (max-width: $screen-sm-min) {
+      padding: 30px 15px 15px 15px;
+    }
+
+    .modal-close {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+
+      @media (max-width: $screen-sm-min) {
+        top: 8px;
+        right: 8px;
+      }
+
+      i {
+        font-size: 20px;
+        line-height: 24px;
+        color: $dark-color;
+      }
+    }
+
+    h2 {
+      margin: 0 0 35px 0;
+      font-size: 30px;
+      line-height: 32px;
+      color: $main-color;
+      text-transform: uppercase;
+
+      @media (max-width: $screen-sm-min) {
+        font-size: 24px;
+        line-height: 26px;
+        margin: 0 0 20px 0;
+      }
+    }
+
+    .payment-detail-row {
+      margin-bottom: 40px;
+
+      @media (max-width: $screen-sm-min) {
+        margin-bottom: 20px;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 20px;
+        color: $dark-color;
+        margin: 0 0 15px 0;
+
+        @media (max-width: $screen-sm-min) {
+          word-break: break-all;
+        }
+
+        &:last-child {
+          margin: 0;
+        }
+
+        span {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
