--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -141,7 +141,7 @@ main {
   color: #fff;
   font-size: 14px;
   line-height: 16px;
-  font-weight: 700;
+  //font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
   border: 1px solid #fff;
@@ -187,6 +187,23 @@ main {
     border-color: $main-color;
     text-decoration: none;
   }
+
+  &.dashboard-btn {
+    border-radius: 5px;
+    background-color: $main-color;
+    border-color: $main-color;
+    min-width: 100px;
+    text-align: center;
+    padding: 12px 20px;
+    font-size: 16px;
+    line-height: 18px;
+    margin: 15px 0 0 0;
+
+    &:hover {
+      background-color: $dark-color;
+      border-color: $dark-color;
+    }
+  }
 }
 
 .repeat-heading {
@@ -213,7 +230,7 @@ main {
     font-size: 40px;
     line-height: 42px;
     color: #fff;
-    font-weight: 700;
+    //font-weight: 700;
     text-transform: uppercase;
     position: relative;
 
@@ -226,10 +243,10 @@ main {
       content: '';
       display: block;
       width: 90px;
-      height: 4px;
+      height: 3px;
       background-color: #fff;
       position: absolute;
-      bottom: -20px;
+      bottom: -15px;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -440,7 +457,7 @@ input[type=number]::-webkit-outer-spin-button {
     display: inline-block;
     font-size: 32px;
     line-height: 34px;
-    font-weight: 700;
+    //font-weight: 700;
     text-transform: uppercase;
     position: relative;
 
@@ -478,7 +495,7 @@ input[type=number]::-webkit-outer-spin-button {
       content: '';
       display: block;
       width: 88px;
-      height: 4px;
+      height: 2px;
       position: absolute;
       bottom: -15px;
       left: 50%;
