--- a/scss/about.scss
+++ b/scss/about.scss
@@ -111,7 +111,7 @@
     display: block;
     font-size: 40px;
     line-height: 43px;
-    font-weight: 700;
+    //font-weight: 700;
     text-transform: uppercase;
     color: $dark-color;
     position: relative;
@@ -129,12 +129,12 @@
       content: '';
       display: block;
       width: 88px;
-      height: 4px;
+      height: 3px;
       background-color: $main-color;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      bottom: -20px;
+      bottom: -15px;
     }
   }
 }
