--- a/scss/mediapage.scss
+++ b/scss/mediapage.scss
@@ -34,7 +34,7 @@
         display: block;
         font-size: 32px;
         line-height: 35px;
-        font-weight: 700;
+        //font-weight: 700;
         color: $dark-color;
         text-transform: uppercase;
         margin-bottom: 20px;
