--- a/scss/privacy-terms.scss
+++ b/scss/privacy-terms.scss
@@ -14,7 +14,7 @@
     margin: 0 0 25px 0;
     font-size: 32px;
     line-height: 35px;
-    font-weight: 700;
+    //font-weight: 700;
     color: $dark-color;
   }
 
@@ -51,7 +51,7 @@
     li {
       font-size: 24px;
       line-height: 26px;
-      font-weight: 700;
+      font-weight: 600;
       color: $dark-color;
 
       a {
@@ -66,7 +66,7 @@
       &:before {
         content: counters(item, ".") ". ";
         counter-increment: item;
-        font-weight: 700;
+        font-weight: 600;
       }
 
       ol {
@@ -90,7 +90,7 @@
               margin-bottom: 0;
 
               span {
-                font-weight: 700;
+                font-weight: 600;
               }
             }
           }
